   an order of magnitue faster, especially for operations like cancel() which
   are involved when clients are disconnected (hence invoked very often).
   Some benchmaks:
       schedule   : +0.5x
       reschedule : +1.7x
       cancel     : +477x  (with 1 milion scheduled functions)
       run:       : +8x
    Also, a single scheduled function now consumes 1/3 of the memory.

Bugfixes:

 * Issue #156: data connection must be closed before sending 226/426 reply.
   This was against RFC-959 and was causing problems with older FTP clients.

 * Issue #161: MLSD 'unique' fact can provide the same value for files having a
   similar device/inode but that in fact are different.
   (patch by Andrew Scheller)

 * Issue #162: (FTPS) SSL shutdown() is not invoked for the control connection.

 * Issue #163: FEAT erroneously reports MLSD. (patch by Andrew Scheller)

 * Issue #166: (FTPS) an exception on send() can cause server to crash (DoS).

 * Issue #167: fix some typos returned on HELP.

 * Issue #170: PBSZ and PROT commands are now allowed before authentication
   fixing problems with non-compliant FTPS clients.

 * Issue #171: (FTPS) an exception when shutting down the SSL layer can cause
   server to crash (DoS).

 * Issue #173: file last modification time shown in LIST response might be in a
   language different than English causing problems with some clients.

 * Issue #175: FEAT response now omits to show those commands which are removed
   from proto_cmds map.

 * Issue #176: SO_REUSEADDR option is now used for passive data sockets to
   prevent server running out of free ports when using passive_ports directive.

 * Issue #187: match proftpd LIST format for files having last modification time
   > 6 months.

 * Issue #188: fix maximum recursion depth exceeded exception occurring if
   client quickly connects and disconnects data channel.

Major API changes since 0.6.0:

 * AbstractedFS root and cwd properties can now be set via setattr().
 * New CallLater class.
